--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   },
   "dependencies": {
     "gatsby": "^3.13.1",
+    "gatsby-plugin-image": "^1.14.0",
+    "gatsby-plugin-sharp": "^3.14.0",
     "gatsby-source-sanity": "^7.0.7",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
